2001-08-10  Steve Youngs  <youngs@xemacs.org>

	* eicq.el (eicq-connect): Revert Erik's patch.

2001-08-09  Steve Youngs  <youngs@xemacs.org>

	* Makefile (CC): Change to 'gcc'.

	* eicq.el (eicq-do-message-helper): Auto-response messages
	now work.

2001-08-08  Erik Arneson  <erik@aarg.net>

	* eicq.el (eicq-connect): Better support for remote icq2tcp
	bridges.

	* Makefile ($(BIN)): Fixed to compile icq2tcp.c instead of the C++
	version.  Woohoo!

	* icq2tcp.c: Replacement for icq2tcp.cc.  It's a direct port to C,
	and now should compile pretty cleanly on FreeBSD and Linux.

	* icq2tcp.cc: Removed.  Obsolete!  Kaput!

2001-08-07  Erik Arneson  <erik@aarg.net>

	* Makefile (INFO_FILES): Changed.
	($(BIN)): New target to accurately reflect dependancies.
	(.texi.info): Ditto!

2001-08-07  Steve Youngs  <youngs@xemacs.org>

	* eicq-convert.el (eicq-import-from-licq): Autoload it.
	Use '====' to take advantage of outline regexp of world-mode.
	(eicq-import-from-micq): Ditto.

2001-08-06  Erik Arneson  <erik@aarg.net>

	* eicq-convert.el (eicq-import-from-micq): Converts an MICQ
	configuration to an EICQ 'world' file.  I tried to get less
	carried away -- this one has fewer lines!  Imports these users
	into the `micq' group.
	(eicq-import-from-licq): Users are imported into the `licq' group.

2001-08-07  Steve Youngs  <youngs@xemacs.org>

	* eicq-convert.el: require 'eicq.
	(eicq-import-from-licq): Use 'eicq-world-rc-filename' in case 
	the user has their world file in a different place from the default.
	Remove 'buf' variable, it's not used. Did somebody get a little 
	carried away? :-)

	* Makefile (SOURCES): Add eicq-convert.el

2001-08-06  Erik Arneson  <erik@aarg.net>

	* eicq-convert.el: New File.
	(eicq-import-from-licq): New.  Converts an LICQ configuration to
	an EICQ 'world' file.

2001-08-02  Thorsten Bonow  <thorsten.bonow@post.rwth-aachen.de>

	* Makefile: Add program locations/path for Windows/Cygwin.

	* eicq-user-install.sh: ditto.
