@@ -1,6 +1,14 @@
 2001-08-10  Steve Youngs  <youngs@xemacs.org>
 
 	* eicq.el (eicq-connect): Revert Erik's patch.
+	(eicq-auto-reply-p): New variable, if non-nil the auto-response
+	message won't automatically reset state to "online".
+	(eicq-do-message-helper): Use 'eicq-auto-reply-p'.
+	(eicq-send-message-helper): Ditto.
+	(eicq-auto-reply-away): Include shameless plug in auto-reply.
+	(eicq-auto-reply-occ): Ditto.
+	(eicq-auto-reply-dnd): Ditto.
+	(eicq-auto-reply-na): Ditto.
 
 2001-08-09  Steve Youngs  <youngs@xemacs.org>
 
